--- a/dir2/code1.html
+++ b/dir2/code1.html
@@ -4,5 +4,6 @@
   </head>
   <body bgcolor="#afafaf">
     <h1>This webpage has colored background.</h1>
+  Line added to test git status
   </body>
 </html>
